# code

./: .buildconfig  .bzrignore  .editorconfig  .gitignore  .travis.yml  0001-flatpak-http-utils-push-custom-thread-local-main-context.patch  0002-flatpak-custom-thread-mainloop-finish-pending-sources-when-r.patch  AUTHORS  CMakeLists.txt  HACKING  README  README.md  appmenu.vala  config.h.cmake  editor  entry.vala  error.java  io.elementary.code.yml  main.vala  main_window.vala  menu.vala  meson.build  meson_options.txt  notebook.vala  org.elementary.scratch.gschema.xml  org.pantheon.scratch.gschema.xml  plugin-translate.py  polkit-build-Add-option-to-build-without-polkitd.patch  pot-generator.sh  run.sh  scratch  toolbars.vala  toolbutton_with_menu.vala  triage.txt  wscript
data/: Application.css  CMakeLists.txt  code.metainfo.xml.in  code.policy.in.in  code.service.in  io.elementary.code-pkexec.cmake  io.elementary.code.1  io.elementary.code.appdata.xml.in  io.elementary.code.appdata.xml.in.in  io.elementary.code.desktop.in.in  io.elementary.code.gresource.xml  io.elementary.code.gschema.xml  io.elementary.code.plugins.spell.gschema.xml  io.elementary.code.plugins.terminal.gschema.xml  io.elementary.code.policy.xml.in.in  meson.build  open-pantheon-code-here.desktop.in.in  org.pantheon.scratch.appdata.xml.in  org.pantheon.scratch.desktop.in  org.pantheon.scratch.desktop.in.in  scratch-text-editor.appdata.xml  scratch-text-editor.appdata.xml.in  scratch-text-editor.desktop  scratch-text-editor.desktop.in  scratch.desktop
data/styles/: elementary-dark.xml  elementary-highcontrast-light.xml  elementary-light.xml
libplugins/: CMakeLists.txt  Plugin.vala  PluginManager.vala  main.vala  module.vapi  scratchplugins.deps  scratchplugins.pc.cmake
plugins/: CMakeLists.txt  meson.build
plugins/bash/: CMakeLists.txt  bash.plugin  bash.vala
plugins/blacklist/: blacklist.plugin  meson.build
plugins/brackets-completion/: CMakeLists.txt  brackets-completion.plugin  brackets-completion.plugin.in  brackets-completion.vala  meson.build
plugins/browser-preview/: BrowserView.vala  CMakeLists.txt  browser-preview.plugin  browser-preview.plugin.in  browser-preview.vala  meson.build
plugins/clipboard-history/: CMakeLists.txt  ClipboardHistory.vala  clipboard-history.plugin
plugins/contractor/: CMakeLists.txt  contractor.plug  contractor.plugin  contractor.plugin.in  contractor.vala  meson.build
plugins/detect-indent/: CMakeLists.txt  detect-indent.plugin  detect-indent.vala  meson.build
plugins/devhelp/: CMakeLists.txt  devhelp.plugin  devhelp.vala
plugins/editorconfig/: editorconfig.plugin  editorconfig.vala  editorconfig.vapi  editorconfig_core.vapi  meson.build
plugins/elementary-templates/: CMakeLists.txt  elementary-templates.plugin  elementary-templates.vala  granite.vala
plugins/filemanager/: CMakeLists.txt  File.vala  FileManagerPlugin.vala  FileView.vala  FolderManagerPlugin.vala  Settings.vala  filemanager.plugin  filemanager.plugin.in  filemanager.vala  marlincore.vala
plugins/folder-manager/: CMakeLists.txt  File.vala  FileItem.vala  FileView.vala  FolderItem.vala  FolderManagerPlugin.vala  Item.vala  MainFolderItem.vala  Settings.vala  folder-manager.plugin  folder-manager.plugin.in  meson.build
plugins/fuzzy-search/: file-item.vala  fuzzy-finder.vala  fuzzy-search-dialog.vala  fuzzy-search-indexer.vala  fuzzy-search-popover.vala  fuzzy-search-project.vala  fuzzy-search.plugin  fuzzy-search.vala  meson.build  search-result.vala
plugins/gvls/: gvls-code-plugin.vala  gvls-code.plugin  meson.build
plugins/highlight-word-selection/: CMakeLists.txt  highlight-word-selection.plugin  highlight-word-selection.vala  meson.build
plugins/markdown-actions/: markdown-actions.plugin  markdown-actions.vala  meson.build
plugins/markdown-preview/: implementation_plan.md  markdown-preview.plugin  markdown-preview.vala  meson.build
plugins/open-with/: CMakeLists.txt  meson.build  open-with.plugin  open-with.plugin.in  open-with.vala
plugins/outline/: CMakeLists.txt  CtagsSymbolResolver.vala  OutlinePane.vala  OutlinePlugin.vala  SidePane.vala  SourceSymbol.vala  SymbolOutline.vala  ValaComparisonHelper.vala  ValaSymbolResolver.vala  meson.build  outline.gresource.xml  outline.plugin
plugins/pastebin/: CMakeLists.txt  meson.build  pastebin.plug  pastebin.plugin  pastebin.plugin.in  pastebin.vala  pastebin_dialog.vala
plugins/preserve-indent/: CMakeLists.txt  meson.build  preserve-indent.plugin  preserve-indent.vala
plugins/project-manager/: CMakeLists.txt  File.vala  FileView.vala  ProjectManager.vala  Settings.vala  project-manager.plugin
plugins/snippets/: meson.build  plugin.vala  snippets.json  snippets.plugin
plugins/source-tree/: CMakeLists.txt  Settings.vala  SourceTreePlugin.vala  source-tree.plugin
plugins/spell/: CMakeLists.txt  Settings.vala  meson.build  spell.plugin  spell.plugin.in  spell.vala
plugins/spell-check/: CMakeLists.txt  spell-check.plugin  spell-check.vala
plugins/strip-trailing-save/: CMakeLists.txt  meson.build  strip-trailing-save.plugin  strip-trailing-save.plugin.in  strip-trailing-save.vala
plugins/terminal/: CMakeLists.txt  Settings.vala  bash.vala  meson.build  terminal.plugin  terminal.plugin.in  terminal.vala
plugins/toggle-code-comments/: CMakeLists.txt  meson.build  toggle-code-comments.plugin  toggle-code-comments.vala
plugins/vala-completion/: CMakeLists.txt  CodeParser.vala  (+10 more)
scratchcore/: CMakeLists.txt  FileHandler.vala  PluginManager.vala  SearchManager.vala  Settings.vala  SourceView.vala  TemplateManager.vala  main.vala  scratchcore.pc.cmake
src/: Application.vala  CMakeLists.txt  DrawSpacesUtils.vala  MainWindow.vala  Scratch.vala  SearchManager.vala  Settings.vala  Utils.vala  codecore.deps  codecore.pc.cmake  config.vala.cmake  config.vala.in  dogfood_code_core.deps  entry.vala  main.vala  main_window.vala  meson.build  notebook.vala  resources.vala  saved_state.vala  scratch-ui.xml  scratch.deps  scratch.pc.cmake  scratch.vala  scratchcore.deps  scratchcore.pc.cmake  settings.vala  wscript
(+894 files in other folders)
