add_subdirectory (contractor)
add_subdirectory (pastebin)
add_subdirectory (filemanager)
add_subdirectory (folder-manager)
add_subdirectory (terminal)
add_subdirectory (browser-preview)
add_subdirectory (strip-trailing-save)
add_subdirectory (spell)
add_subdirectory (open-with)
add_subdirectory (brackets-completion)
add_subdirectory (word-completion)
add_subdirectory (source-tree)
add_subdirectory (outline)
add_subdirectory (vim-emulation)
add_subdirectory (highlight-word-selection)
add_subdirectory (clipboard-history)