msgfmt = find_program('msgfmt')

subdir('brackets-completion')
subdir('detect-indent')
subdir('editorconfig')
subdir('highlight-word-selection')
subdir('markdown-actions')
subdir('outline')
subdir('pastebin')
subdir('preserve-indent')
subdir('spell')
subdir('strip-trailing-save')
subdir('terminal')
subdir('vim-emulation')
subdir('word-completion')
subdir('fuzzy-search')
