msgfmt = find_program('msgfmt')

subdir('brackets-completion')
subdir('detect-indent')
subdir('editorconfig')
subdir('highlight-word-selection')
subdir('markdown-actions')
subdir('pastebin')
subdir('preserve-indent')
subdir('spell')
subdir('snippets')
subdir('vim-emulation')
subdir('word-completion')

